footer 1 complete and announcement uncomplete

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>National Institute of Technology Patna</title>
+	<title>NIT Patna</title>
+	<link rel="icon" href="http://www.nitp.ac.in/images/nitlogo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
 	<div class="row head-link">
@@ -16,7 +18,7 @@
 	</div>
 	<div class="row banner">
 		<div class="nitp-logo">
-			<img src="http://www.nitp.ac.in/images/nitlogo.png">
+			<img src="http://www.nitp.ac.in/images/nitlogo.png" alt="nitp_logo">
 		</div>
 		<div class="banner-title">
 			<p>NATIONAL INSTITUTE OF TECHNOLOGY PATNA</p>
@@ -189,8 +191,123 @@ under MHRD, Government of India</p>
 				</div>
 			</div>
 		</div>
+
+
+		<div class="row imp-links" style="color: #614ad3;">
+			<div class="links-row">
+				<img src="images/new1.png">				<a href="#home">Notice Regarding Ph.D. Registration</a>
+			</div>
+			<div class="links-row">
+				<img src="images/new1.png">				<a href="#">List of shortlisted candidates for PhD Admission</a>
+			</div>
+			<div class="links-row">
+				<img src="images/new1.png">				<a href="#">Result of PhD Admission Test held on 20June 2019</a>
+			</div>
+		</div>
+
+
+		<div class="row">
+
+			<div class="announcements col-6">
+				<h1>Announcements</h1>
+				<div class="links-lists">
+					
+				</div>
+			</div>
+
+			<div class="misc-links col-6">
+				<div class="links-row">
+					<a class="link" href="#">ICT Academy</a>
+					<a class="link" href="#">Admission/JOSAA 2018/CCMT 2018</a>
+					
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">anti ragging</a>
+					<a class="link" href="#">academic calander</a>
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">TEQIP</a>
+					<a class="link" href="#">tenders</a>
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">chanakya</a>
+					<a class="link" href="#">student societies</a>
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">convocation 2018</a>
+					<a class="link" href="#">ASME</a>
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">people at NITP</a>
+					<a class="link" href="#">corona</a>
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">first year</a>
+					<a class="link" href="#">incubation center</a>
+				</div>
+				<div class="links-row">
+					<a class="link" href="#">national service scheme</a>
+					<a class="link" href="#">IEEE</a>
+				</div>
+
+			</div>
+		</div>
+
+
+
 		
 	</section>
+
+	<footer>
+		<div class="contact">
+			<h2>Contact</h2>
+			<hr>
+			<p>National Institute of Technology Patna</p>
+			<p>Patna, Bihar (800005), India</p>
+			<p>Phone: +91-0612-237 1715 / 237 2715</p>
+			<p>FAX : +91-0612-2670631 , 0612-2660480</p>
+		</div>
+
+		<div class="know-us">
+			<h2>Know Us</h2>
+			<hr>
+			<p><a href="#">Sitemap</a></p>
+			<p><a href="#">Director's Desk</a></p>
+			<p><a href="#">How to Reach</a></p>
+			<p><a href="#">NIRF</a></p>
+			<p><a href="#">RTI</a></p>
+		</div>
+
+		<div class="other-links">
+			<h2>Other Links</h2>
+			<hr>
+			<p><a href="#">Important Links</a></p>
+			<p><a href="#">BOG/FC/BWC Minutes</a></p>
+			<p><a href="#">senate minutes</a></p>
+			<p><a href="#">annual reports</a></p>
+			<p><a href="#">grievance cell</a></p>
+			<p><a href="#">NIT act and statutes</a></p>
+		</div>
+
+		<div class="extra-links">
+			<h2>Extra Links</h2>
+			<hr>
+			<p><a href="#">digital map of NIT patna</a></p>
+			<p><a href="#">privacy policy</a></p>
+			<p><a href="#">refund rules</a></p>
+			<p><a href="#">terms of use</a></p>
+			<p><a href="#">staff claim form</a></p>
+			<p><a href="#">faculty login</a></p>
+		</div>
+	</footer>
+
+	<footer class="soc-med-links">
+		
+	</footer>
+
+	<footer class="copyright">
+		
+	</footer>
 	
 	<a href="second.html">second</a>
 
