complete home page except announcement part

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ under MHRD, Government of India</p>
 					<a class="link" href="#">tenders</a>
 				</div>
 				<div class="links-row">
-					<a class="link" href="#">chanakya</a>
+					<a class="link" href="http://exam.nitp.ac.in:9001/">chanakya</a>
 					<a class="link" href="#">student societies</a>
 				</div>
 				<div class="links-row">
@@ -302,14 +302,19 @@ under MHRD, Government of India</p>
 	</footer>
 
 	<footer class="soc-med-links">
-		
+		<a href="http://www.facebook.com/nitpatnaofficial"><img class="fb" src="images/fb.png"></a>
+		<a href="https://plus.google.com/communities/101561880444961186830"><img class="fb" src="images/gplus.png"></a>
+		<a href="#"><img class="fb" src="images/twitter.png"></a>
 	</footer>
 
+	<hr>
+
 	<footer class="copyright">
-		
+		<p>National Institute of Technology, Patna-800005, Bihar, INDIA</p>
+		<p>&copy; 2019 NIT Patna</p>
 	</footer>
 	
-	<a href="second.html">second</a>
+	<!-- <a href="second.html">second</a> -->
 
 </body>
 <script type="text/javascript" src="scripts/home.js"></script>
