adds styles for mobile compatability

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
 	<div class="row head-link">
@@ -131,6 +132,62 @@ under MHRD, Government of India</p>
 			</li>
 		</ul>
 	</nav>
+
+	<footer>
+		<div class="contact">
+			<h2>Contact</h2>
+			<hr>
+			<p>National Institute of Technology Patna</p>
+			<p>Patna, Bihar (800005), India</p>
+			<p>Phone: +91-0612-237 1715 / 237 2715</p>
+			<p>FAX : +91-0612-2670631 , 0612-2660480</p>
+		</div>
+
+		<div class="know-us">
+			<h2>Know Us</h2>
+			<hr>
+			<p><a href="#">Sitemap</a></p>
+			<p><a href="#">Director's Desk</a></p>
+			<p><a href="#">How to Reach</a></p>
+			<p><a href="#">NIRF</a></p>
+			<p><a href="#">RTI</a></p>
+		</div>
+
+		<div class="other-links">
+			<h2>Other Links</h2>
+			<hr>
+			<p><a href="#">Important Links</a></p>
+			<p><a href="#">BOG/FC/BWC Minutes</a></p>
+			<p><a href="#">senate minutes</a></p>
+			<p><a href="#">annual reports</a></p>
+			<p><a href="#">grievance cell</a></p>
+			<p><a href="#">NIT act and statutes</a></p>
+		</div>
+
+		<div class="extra-links">
+			<h2>Extra Links</h2>
+			<hr>
+			<p><a href="#">digital map of NIT patna</a></p>
+			<p><a href="#">privacy policy</a></p>
+			<p><a href="#">refund rules</a></p>
+			<p><a href="#">terms of use</a></p>
+			<p><a href="#">staff claim form</a></p>
+			<p><a href="#">faculty login</a></p>
+		</div>
+	</footer>
+
+	<footer class="soc-med-links">
+		<a href="http://www.facebook.com/nitpatnaofficial"><img class="fb" src="images/fb.png"></a>
+		<a href="https://plus.google.com/communities/101561880444961186830"><img class="fb" src="images/gplus.png"></a>
+		<a href="#"><img class="fb" src="images/twitter.png"></a>
+	</footer>
+
+	<hr>
+
+	<footer class="copyright">
+		<p>National Institute of Technology, Patna-800005, Bihar, INDIA</p>
+		<p>&copy; 2019 NIT Patna</p>
+	</footer>
 
 </body>
 </html>
