menu option complete in about for mobile

--- a/about.html
+++ b/about.html
@@ -137,9 +137,10 @@ under MHRD, Government of India</p>
 
 	<div class="row container">
 		<div class="col-3 menu">
-			<!-- <div class="expnd-btn">
-				
-			</div> -->
+			<div class="expnd-btn">
+				<img src="images/menu.png">
+				<p>Menu</p>
+			</div>
 			<ul>
 				<li id="about-us">about us</li>
 				<li id="vision">vision</li>
