iframe issue resolved

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@ under MHRD, Government of India</p>
 	</nav>
 
 	<div class="row container">
-		<div class="col-3 menu">
+		<div class="col-2 menu">
 			<div class="expnd-btn">
 				<img src="images/menu.png">
 				<p>Menu</p>
@@ -149,9 +149,13 @@ under MHRD, Government of India</p>
 				<li id="campus">campus</li>
 			</ul>
 		</div>
-		<div class="col-9 content">
+		
+		<div class="col-10 content">
 			<h1></h1>
-			<iframe name="if" src="iframe/about/about-us.html"></iframe>
+			<div>
+				<iframe id="if" onload="changeHeight(this)"></iframe>
+			</div>
+			
 		</div>
 	</div>
 
