about page complete

--- a/about.html
+++ b/about.html
@@ -215,6 +215,7 @@ under MHRD, Government of India</p>
 		<p>&copy; 2019 NIT Patna</p>
 	</footer>
 	<script type="text/javascript" src="scripts/about.js"></script>
+	<script type="text/javascript" src="scripts/menu.js"></script>
 
 </body>
 </html>
