--- a/iframe/about/mission.html
+++ b/iframe/about/mission.html
@@ -1,1 +1,44 @@
-mission
+<!DOCTYPE html>
+<html>
+<head>
+	<title>mission</title>
+	<style type="text/css">
+		*{
+			box-sizing: border-box;
+		}
+		ul{
+			font-weight: 700;
+			margin: 0;
+			padding-left: 15px;
+			overflow: visible;
+		}
+		ul li{
+			margin: 1rem 0;
+		}
+		body{
+			padding: 10px;
+			font-family: 'Roboto', sans-serif;
+		}
+	</style>
+</head>
+<body>
+	<ul>
+		<li>
+		To generate new knowledge by engaging in cutting-edge research and to promote academic growth by offering state-of-the-art undergraduate, postgraduate and doctoral programmes
+		</li>
+		<li>
+			To identify, based on an informed perception of Indian, regional and global needs, areas of specialization upon which the Institute can concentrate
+		</li>
+		<li>
+			To undertake collaborative projects which offer opportunities for long term interaction with academia and industry
+		</li>
+		<li>
+			To develop human potential to its fullest extent so that intellectually capable and imaginatively gifted leaders can emerge in a range of profession
+		</li>
+	</ul>
+	
+
+
+
+</body>
+</html>
