--- a/iframe/about/values.html
+++ b/iframe/about/values.html
@@ -1,1 +1,35 @@
-values
+<!DOCTYPE html>
+<html>
+<head>
+	<title>values</title>
+	<style type="text/css">
+		*{
+			box-sizing: border-box;
+		}
+		ul{
+			margin: 0;
+			padding-left: 15px;
+			list-style-type: square;
+			font-weight: 300;
+		}
+		ul li{
+			margin: 0.5rem 0;
+		}
+		body{
+			padding: 10px;
+			font-family: 'Roboto', sans-serif;
+		}
+	</style>
+</head>
+<body>
+	<ul>
+		<li>Academic integrity and accountability.</li>
+		<li>Respect and tolerance for the views of every individual.</li>
+		<li>Attention to issues of national relevance as well as of global concern.</li>
+		<li>Breadth of understanding, including knowledge of the human sciences.</li>
+		<li>Appreciation of intellectual excellence and creativity.</li>
+		<li>An unfettered spirit of explorating, rationality and enterprise.</li>
+		
+	</ul>
+</body>
+</html>
