--- a/iframe/about/vision.html
+++ b/iframe/about/vision.html
@@ -1,1 +1,26 @@
-vision
+<!DOCTYPE html>
+<html>
+<head>
+	<title>vision</title>
+	<style type="text/css">
+		*{
+			box-sizing: border-box;
+		}
+		ul{
+			font-weight: 700;
+			margin: 0;
+			padding-left: 15px;
+			overflow: visible;
+		}
+		body{
+			padding: 10px;
+			font-family: 'Roboto', sans-serif;
+		}
+	</style>
+</head>
+<body>
+	<ul>
+		<li>To contribute to India and the World through excellence in scientific and technical education and research; to serve as a valuable resource for industry and society; and to remain a source of pride for all Indians.</li>
+	</ul>
+</body>
+</html>
