seperated style for mobile and desktop in styles.css. only desktop is working now

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@ under MHRD, Government of India</p>
 		</div>
 	</div>
 
+	<div style="position: sticky; top: 0; z-index: 20">
+		<div class="mob header">
+			<div class="menu-img">
+				<img src="images/menu.png">
+			</div>
+			<div class="active-menu">
+				<h1>Home</h1>
+			</div>
+		</div>
+	
 	<nav class="row nav-bar">
 		<ul>
 			<li  class="active"><a href="#">Home</a>
@@ -134,6 +144,7 @@ under MHRD, Government of India</p>
 			</li>
 		</ul>
 	</nav>
+</div>
 
 	<section>
 		<!-- IMPORTANT LINKS -->
@@ -319,4 +330,5 @@ under MHRD, Government of India</p>
 
 </body>
 <script type="text/javascript" src="scripts/home.js"></script>
+<script type="text/javascript" src="scripts/menu.js"></script>
 </html>
