--- a/iframe/about/campus.html
+++ b/iframe/about/campus.html
@@ -9,6 +9,7 @@
 		body{
 			font-family: 'Roboto', sans-serif;
 			text-align: justify;
+			font-weight: 300;
 		}
 		.container::after{
 			content: "";
