--- a/second.html
+++ b/second.html
@@ -5,21 +5,169 @@
 	<title>second</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="second.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	
 </head>
 <body>
-	<div class="row">
-		<div class="relation">brother</div>
-		<div class="name">mithlesh</div>
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<div style="position: sticky; top: 0">
+	<div class="mob header">
+		<div class="menu-img">
+			<img src="images/menu.png">
+		</div>
+		<div class="active-menu">
+			<h1>Home</h1>
+		</div>
 	</div>
-	<div class="row">
-		<div class="relation">brother</div>
-		<div class="name">mithun</div>
-	</div>
-	<div class="row">
-		<div class="relation">sister</div>
-		<div class="name">madhu</div>
-	</div>
+	
+	<nav class="row nav-bar">
+		<ul>
+			<li  class="active"><a href="#">Home</a>
+				<ul>
+					<li><a href="#">PAN Card</a></li>
+					<li><a href="#">GST Certificate</a></li>
+					<li><a href="#">RTI</a></li>
+				</ul>
+			</li>
+			<li><a href="about.html?pp=about-us">About Us</a>
+				<ul>
+					<li><a href="about.html?pp=about-us">About</a></li>
+					<li><a href="about.html?pp=vision">Vision</a></li>
+					<li><a href="about.html?pp=mission">Mission</a></li>
+					<li><a href="about.html?pp=values">Values</a></li>
+					<li><a href="about.html?pp=campus">Campus</a></li>
+				</ul>
+			</li>
+			<li><a href="admin.html?pp=director">administration</a>
+				<ul>
+					<li><a href="admin.html?pp=director">Director</a></li>
+					<li><a href="admin.html?pp=admin_">Administration</a></li>
+					<li><a href="admin.html?pp=deans">Deans</a></li>
+					<li><a href="admin.html?pp=bog">BOG</a></li>
+					<li><a href="admin.html?pp=bwc">BWC</a></li>
+					<li><a href="admin.html?pp=idc">IDC</a></li>
+					<li><a href="admin.html?pp=fin-com">Finance Committee</a></li>
+					<li><a href="admin.html?pp=senate">senate</a></li>
+					<li><a href="admin.html?pp=service-units">service units</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Academics</a>
+				<ul>
+					<li><a href="#">Recruitments</a></li>
+					<li><a href="#">Regulation & currucula</a></li>
+					<li><a href="#">Course structure</a></li>
+					<li><a href="#">academic notices</a></li>
+					<li><a href="#">admissions</a></li>
+					<li><a href="#">programmes</a></li>
+					<li><a href="#">format for official documents</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Departments</a>
+				<ul>
+					<li><a href="#">architecture</a></li>
+					<li><a href="#">civil engineering</a></li>
+					<li><a href="#">computer science and engineering</a></li>
+					<li><a href="#">electrical engineering</a></li>
+					<li><a href="#">electronics and communication</a></li>
+					<li><a href="#">mechanical engineering</a></li>
+					<li><a href="#">physics</a></li>
+					<li><a href="#">mathematics</a></li>
+					<li><a href="#">chemistry</a></li>
+					<li><a href="#">humanities & social sciences</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Facilities</a>
+				<ul>
+					<li><a href="#">medical facilities</a></li>
+					<li><a href="#">sports facilities</a></li>
+					<li><a href="#">SAC</a></li>
+					<li><a href="#">hostels and mess</a></li>
+					<li><a href="#">laboratories</a></li>
+					<li><a href="#">wi fi</a></li>
+					<li><a href="#">banking</a></li>
+					<li><a href="#">security</a></li>
+					<li><a href="#">women cell</a></li>
+					<li><a href="#">scholarship</a></li>
+					<li><a href="#">EMU</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Students</a>
+				<ul>
+					<li><a href="#">computer centre</a></li>
+					<li><a href="#">central library</a></li>
+					<li><a href="#">student activities</a></li>
+					<li><a href="#">1st year students</a></li>
+					<li><a href="#">anti ragging</a></li>
+					<li><a href="#">socities</a></li>
+					<li><a href="#">tech fest</a></li>
+					<li><a href="#">student exchange</a></li>
+					<li><a href="#">faculty advisor (first year students)</a></li>
+					
+				</ul>
+			</li>
+			<li><a href="#">Placements</a>
+				<ul>
+					<li><a href="#">director message</a></li>
+					<li><a href="#">TPO message</a></li>
+					<li><a href="#">our recruiters</a></li>
+					<li><a href="#">recent placement</a></li>
+					<li><a href="#">placement notices</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Alumni</a></li>
+			<li><a href="#">DIONITP</a></li>
+			<li><a href="#">I-CARD</a>
+				<ul>
+					<li><a href="#">employee i-card</a></li>
+					<li><a href="#">student i-card</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+</div>
+
+	
+
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<script type="text/javascript" src="second.js"></script>
 </body>
 </html>
 
