--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/footer.css">
-	<link rel="stylesheet" type="text/css" href="css/about.css">
+	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -37,20 +38,20 @@ under MHRD, Government of India</p>
 				<i class="fas fa-bars"></i>
 			</div>
 			<div class="active-menu">
-				<h1>Home</h1>
+				<h1>About</h1>
 			</div>
 		</div>
 	
 		<nav class="row nav-bar">
 			<ul>
-				<li  class="active"><a href="#">Home</a>
+				<li><a href="index.html">Home</a>
 					<ul>
 						<li><a href="#">PAN Card</a></li>
 						<li><a href="#">GST Certificate</a></li>
 						<li><a href="#">RTI</a></li>
 					</ul>
 				</li>
-				<li><a href="about.html?pp=about-us">About Us</a>
+				<li class="active"><a href="#">About Us</a>
 					<ul>
 						<li><a href="about.html?pp=about-us">About</a></li>
 						<li><a href="about.html?pp=vision">Vision</a></li>
