--- a/iframe/admin/director.html
+++ b/iframe/admin/director.html
@@ -1,1 +1,57 @@
-director
+<!DOCTYPE html>
+<html>
+<head>
+	<title>director</title>
+	<style type="text/css">
+		body{
+			text-align: center;
+		}
+		img{
+			display: block;
+			width: 100%;
+		}
+		.header{
+			background-color: powderblue;
+		}
+		.profile-content{
+			display: none;
+		}
+	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+</head>
+<body>
+	<div class="header">
+		<img src="/iframe/images/director.jpg">
+		<p>Prof. Pradip Kumar Jain</p>
+		<button onclick="show()">View Profile</button>
+	</div>
+	<div class="profile-content">
+		
+		<p>
+			Prof. Pradip K. Jain has joined as a Lecturer of Electronics Engineering at Institute of Technology, Banaras Hindu University in 1981, and became Professor in the Year 2001. He has made significant contribution in the areas of analysis, modeling and development of high power microwave tubes and gyrotron devices.
+		</p>
+		<p>
+			Currently, He is Director of National Institute of Technology, Patna. He also served as Dean, Research and Development of Indian Institute of Technology (BHU), Varanasi, Coordinator of the Centre of Research in Microwave Tubes, Coordinator, Center of Advanced Study, and Head of Department of Electronics Engineering, IIT (BHU) besides acting as Chairman of the various Institute level committees over the years. 
+		</p>
+		<p>
+			Prof. Jain is actively and extensively engaged in collaborative research and development activities with other national laboratories in this area, like, CEERI (CSIR, Pilani), Various DRDO Laboratories, IPR (DAE, Gandhinagar) and successfully executed a number of sponsored research projects. His current research interests include high power microwave devices and circuits. 
+		</p>
+		<p>
+			Prof. Jain was a Visiting Scientist at Massachusetts Institute of Technology, Cambridge, US and at the Pennsylvania State University, US in the years 2008 and 2007, respectively. He has so far guided 20 doctoral theses, published more than 100 research papers in SCI journals and 200 in the conference proceedings beside a patent and authoring six book/monograph chapters. 
+		</p>
+		<p>
+			Dr. Jain is a senior member of IEEE, fellow of Institution of Electronics and Telecommunications Engineers of India, Fellow of Institution of Engineers of India and also a fellow of Vacuum Electron Devices and Application Society.
+		</p>
+	</div>
+	
+</body>
+<script type="text/javascript" src="/scripts/menu.js"></script>
+<script type="text/javascript">
+	function show(){
+		$('.profile-content').slideToggle();
+		var ifr = document.querySelector('body');
+		console.log(ifr);
+		changeHeight(ifr);
+	}
+</script>
+</html>
